<resources>
    <string name="app_name">AniMate</string>
    // Button text
    <string name="comenzar">Comenzar</string>
    <string name="salir">Salir</string>
    // Image description
    <string name="start_page_bg">Start page background</string>
    <string name="start_button">Start button image</string>
    <string name="exit_button">Exit button image</string>
    <string name="menu">Menu</string>
    <string name="hola">Hola</string>
    <string name="adios">Adios</string>
    <string name="feedback_correct">¡Muy bien!</string>
    <string name="feedback_incorrect">¡Tú puedes! Inténtalo de nuevo.</string>
    <string name="option_a">a</string>
    <string name="option_b">b</string>
    <string name="option_c">c</string>

    <string name="Instruction_1_1">¿Cuál vaca tiene manchas de color blanco?</string>
    <string name="Instruction_1_2">¿Cuál es el animal más grande?</string>
    <string name="Instruction_1_3">¿Cuál es el animal que aparece más veces?</string>
    <string name="Instruction_1_4">¿Cuál bosque tiene más árboles?</string>
    <string name="Instruction_1_5">Asocia a los animales con otros del mismo tamaño\n según su tamaño real.</string>
    <string name="Instruction_1_6">Clasifica las frutas según su color.</string>

    <string name="Instruction_2_1">¿Cuál animalito está más lejos del gato?</string>
    <string name="Instruction_2_2">Coloca la ardilla abajo del árbol.</string>
    <string name="Instruction_2_3">Coloca la mariposa arriba de la flor.</string>
    <string name="Instruction_2_4">¿Cuál animalito está entre el perro y el mono?</string>
    <string name="Instruction_2_5">Coloca la banana a la izquierda del mono.</string>
    <string name="Instruction_2_6">Coloca el pasto a la derecha de la vaca.</string>

    <string name="Instruction_3_1">¿Cuál animal es el más lento?</string>
    <string name="Instruction_3_2">Ordena las siguientes imágenes en antes, ahora y después.</string>
    <string name="Instruction_3_3">¿Según el desarrollo secuencial, qué ocurrió primero?</string>
    <string name="Instruction_3_4">¿Cuál animal es el más rápido?</string>
    <string name="Instruction_3_5">Ordena las siguientes imágenes en antes, ahora y después.</string>
    <string name="Instruction_3_6">¿En cuál imagen es de día?</string>

    <string name="Instruction_4_1">¿Cuál grupo de chanchitos tiene la misma \ncantidad que en la imagen?</string>
    <string name="Instruction_4_2">¡Ayuda a los elefantes a encontrar a sus amigos!\nArrastra los grupos que tienen la misma cantidad\n y ponlos juntos, uno encima del otro.</string>
    <string name="Instruction_4_3">¡Mira la imagen! ¿Qué opción tiene la misma \ncantidad de jirafas?</string>
    <string name="Instruction_4_4">¡Observa bien! ¿Qué grupo de animalitos tiene \nla misma cantidad que la imagen?</string>
    <string name="Instruction_4_5">¡Ayuda a los pollitos! Arrastra cada grupo a un nido \npara que todos tengan su casita.</string>
    <string name="Instruction_4_6">Elige el grupo de ramas que esté \nen las mismas posiciones que los tucanes.</string>

    <string name="Instruction_5_1">Ayuda a los animalitos a comer.\n Arrastra la comida que les gusta hasta ellos.</string>
    <string name="Instruction_5_2">¿De qué animalito es la sombra que aparece?</string>
    <string name="Instruction_5_3">Clasifica a los animalitos en primates, felinos y aves.</string>
    <string name="Instruction_5_4">Elige la opción donde cada tucán tenga su nido.</string>
    <string name="Instruction_5_5">Distribuye los bananos de manera que \ncada monito reciba uno.</string>
    <string name="Instruction_5_6">Dale 1 fresa al pato, 2 al perrito y 3 a la tortuga. \n¡Ayúdalos a comer!</string>

    <string name="Instruction_6_1">¿Cuál animalito es el siguiente?</string>
    <string name="Instruction_6_2">¿Cuál animalito es el siguiente?</string>
    <string name="Instruction_6_3">¿Cuál animalito debería estar en esa posición? </string>
    <string name="Instruction_6_4">¿Cuál animalito fue el primero?</string>
    <string name="Instruction_6_5">¿Cuál animalito debería estar en esa posición?</string>
    <string name="Instruction_6_6">¿Qué animal sigue después del gato, pero saltando \n dos animales hacia adelante?</string>

    <string name="Instruction_7_1">¿Cuál de estos animalitos pone huevos?</string>
    <string name="Instruction_7_2">¿Cuál de estos animalitos es capaz de volar?</string>
    <string name="Instruction_7_3">¿Qué animalito vive bajo el agua?</string>
    <string name="Instruction_7_4">¿Cuál de estos animalitos tiene cuernos?</string>
    <string name="Instruction_7_5">¿Cuál de estos animalitos puede saltar más alto?</string>
    <string name="Instruction_7_6">¿Cuál de estos animalitos puede trepar \nárboles más rapido?</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


</resources>