<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="@dimen/_600sdp"
        android:layout_height="@dimen/_500sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/start_bg"
        android:contentDescription="@string/start_page_bg" />

    <ImageView
        android:id="@+id/startBttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_200sdp"
        android:layout_marginStart="@dimen/_140sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toStartOf="@+id/exitBttn"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toTopOf="@+id/background"
        app:srcCompat="@drawable/button"
        android:contentDescription="@string/start_button" />

    <ImageView
        android:id="@+id/exitBttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_200sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_140sdp"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintStart_toEndOf="@id/startBttn"
        app:layout_constraintTop_toTopOf="@+id/background"
        app:srcCompat="@drawable/button"
        android:contentDescription="@string/exit_button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comenzar"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="@+id/startBttn"
        app:layout_constraintEnd_toEndOf="@+id/startBttn"
        app:layout_constraintStart_toStartOf="@+id/startBttn"
        app:layout_constraintTop_toTopOf="@+id/startBttn" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salir"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="@+id/exitBttn"
        app:layout_constraintEnd_toEndOf="@+id/exitBttn"
        app:layout_constraintStart_toStartOf="@+id/exitBttn"
        app:layout_constraintTop_toTopOf="@+id/exitBttn" />
</androidx.constraintlayout.widget.ConstraintLayout>